--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,6 +3,10 @@
   font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 
+//html {
+//  background-color: #2c3e50;
+//}
+
 body {
   width: 100%;
   color: #2c3e50;
